[package]
name = "onlinematching"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["shinnku <nikaidou@shinnku.com>"]
description = "A fun game where you guess what number the computer has chosen."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
petgraph = "0.6.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
