[package]
name = "onlinematching"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["shinnku <nikaidou@shinnku.com>"]
description = "Online bipartite matching is a type of matching problem where the goal is to match elements from two disjoint sets (also known as \"bipartite graphs\"), where one set represents the \"left\" vertices and the other set represents the \"right\" vertices."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
petgraph = "0.6.3"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
